crates/zoid-tui/tests/snapshots/shell_snapshot__object_overlay_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw_overlay(Overlay::Objects, 100, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        " zoid  CHAT  ⎇ main                                                                                 ",
        "┌ ▤ select object ────────────────────────────────────┐ ▾ context · tokens                          ",
        "│ ▤ src/ast.rs                                        │  churn                                      ",
        "│ ● parse  (src/ast.rs)                               │  [x] evict cold                           0 ",
        "│ ● Ast  (src/ast.rs)                                 │                                             ",
        "│ ⚠ error: shell                                      │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │ ▸ files                                     ",
        "│                                                     │                                             ",
        "│                                                     │ ▸ branch                                    ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "│                                                     │                                             ",
        "└─────────────────────────────────────────────────────┘                                             ",
        "                                                                                                    ",
        "┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        " CHAT  ⎇ main · zoom normal · ^P palette · ⇧Tab → Build · ^C quit                                   ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 0, fg: Rgb(88, 166, 255), bg: Rgb(13, 42, 77), underline: Reset, modifier: BOLD,
        x: 12, y: 0, fg: Rgb(188, 140, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 1, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(201, 209, 217), bg: Rgb(22, 51, 92), underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 3, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 9, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 11, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 2, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Rgb(88, 166, 255), bg: Rgb(13, 42, 77), underline: Reset, modifier: NONE,
        x: 6, y: 23, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
