crates/zoid-tui/tests/snapshots/shell_snapshot__object_overlay_wide_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw_overlay(Overlay::Objects, 140, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 140, height: 24 },
    content: [
        "                                                                                                                                            ",
        "    ● read_┌ ▤ select object ─────────────────────────────────────────────────────┐             ╭ ▾ repo ─────────────────────────────────╮ ",
        "    ✓ read_│ ▤ src/ast.rs                                                         │             │repo   ⎇ main                            │ ",
        "    ⚠ shell│ ● parse  (src/ast.rs)                                                │             │worktree (none)                          │ ",
        "           │ ● Ast  (src/ast.rs)                                                  │             │changes +0 -0 · 0 files                  │ ",
        "           │ ⚠ error: shell                                                       │             ╰─────────────────────────────────────────╯ ",
        "           │                                                                      │                                                         ",
        "           │                                                                      │             ╭ ▾ session ──────────────────────────────╮ ",
        "           │                                                                      │             │(unnamed)                                │ ",
        "           │                                                                      │             │ ·                                       │ ",
        "           │                                                                      │             │dur 0m   tok 0                           │ ",
        "           │                                                                      │             │ctx 0                                    │ ",
        "           │                                                                      │             │cwd                                      │ ",
        "           │                                                                      │             ╰─────────────────────────────────────────╯ ",
        "           │                                                                      │                                                         ",
        "           │                                                                      │             ╭ ▾ context · tokens ─────────────────────╮ ",
        "           │                                                                      │             │churn                              cache │ ",
        "           │                                                                      │             │                                         │ ",
        "           └──────────────────────────────────────────────────────────────────────┘             │                                         │ ",
        "                                                                                                ╰─────────────────────────────────────────╯ ",
        "┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                                                                                          │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
        " CHAT  zoom normal · ^P palette                                                                                                      ● idle ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(63, 185, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Rgb(201, 209, 217), bg: Rgb(22, 51, 92), underline: Reset, modifier: NONE,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 2, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 104, y: 2, fg: Rgb(188, 140, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 110, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Rgb(248, 81, 73), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 3, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 112, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 4, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 105, y: 4, fg: Rgb(63, 185, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 107, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 108, y: 4, fg: Rgb(248, 81, 73), bg: Reset, underline: Reset, modifier: NONE,
        x: 110, y: 4, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 120, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 8, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 106, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 9, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 100, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 10, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 101, y: 10, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 106, y: 10, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 110, y: 10, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 111, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 11, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 101, y: 11, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 103, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 12, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 101, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 16, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 103, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 132, y: 16, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 18, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 138, y: 18, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 2, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 21, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Rgb(88, 166, 255), bg: Rgb(13, 42, 77), underline: Reset, modifier: NONE,
        x: 6, y: 23, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 133, y: 23, fg: Rgb(63, 185, 80), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
