crates/zoid-tui/tests/snapshots/shell_snapshot__palette_arg_stage_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 100, 24)"
---
"                                                zoid                                      ^P palette"
"┌ Rename to: my-feature ──────────────────────────────┐ ╭ ▾ repo ─────────────────────────────────╮ "
"│Enter apply · Esc back                               │ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ session ──────────────────────────────╮ "
"│                                                     │ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │⌚ dur 0m   tok/cac 0                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ context · tokens ─────────────────────╮ "
"│                                                     │ │churn                              cache │ "
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ tasks ────────────────────────────────╮ "
"│                                                     │ │no tasks                                 │ "
"└─────────────────────────────────────────────────────┘ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                        ◐ tool          ● idle       ⊟ compact                     zoom normal "
