crates/zoid-tui/tests/snapshots/shell_snapshot__palette_direct_phase_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 100, 24)"
---
"                                                zoid                                      ^P palette"
"┌ :mode Build ────────────────────────────────────────┐ ╭ ▾ repo ─────────────────────────────────╮ "
"│→ Switch to Build                                    │ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"│⏎ run · esc close                                    │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ session ──────────────────────────────╮ "
"│                                                     │ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │⌚ dur 0m   tok/cac 0                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ context · tokens ─────────────────────╮ "
"│                                                     │ │churn                              cache │ "
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ tasks ────────────────────────────────╮ "
"│                                                     │ │no tasks                                 │ "
"└─────────────────────────────────────────────────────┘ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                                     ◐    ● idle    ⊟                              zoom normal "
